fix horizontal scroll

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,7 @@ body {
 	line-height: 1 !important;
 	-webkit-transform-style: preserve-3d;
 	-webkit-backface-visibility: hidden;
+	overflow-y: hidden;
 }
 
 code {
